--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-countdown": "^2.3.5",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "wagmi": "^0.12.2"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react-color": "^3.0.6",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.11",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
